whitespace fix

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@
 }
 
 body {
-    overflow-x: hidden;
     margin: 0;
+    overflow-x: hidden;
     background-color: #F8648B;
 }
 
@@ -129,7 +129,6 @@ aside {
     left: 42%;
     bottom: 110px;
     margin-right: 50%;
-    margin-bottom: 25%;
     text-align: right;
 }
 
